# notes-server

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  README.tz.md  README.tz2.md  ddos.sh  docker-compose.custom-balancer.yml  docker-compose.debug.yml  docker-compose.multi-tier.yml  docker-compose.nginx.yml  docker-compose.side-car.yml  docker-compose.yml  down_debug.sh  nginx.conf  up_release.sh
docs/: postman_collection.json
email-service/: Cargo.toml  Dockerfile  config.example.yaml
email-service/src/: config.rs  dto.rs  handler.rs  main.rs  service.rs
grpc-client/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
grpc-client/src/: main.rs
load-balancer/: Cargo.toml  Dockerfile  config.sidecar.yaml  config.yaml
load-balancer/configs/: config.primary.yaml  config.secondary.1.yaml  config.secondary.2.yaml
load-balancer/src/: balancer.rs  config.rs  instance.rs  main.rs  strategy.rs
notes-server/: Cargo.toml  Dockerfile  Dockerfile.dev  build.rs  docker-compose.yml  nginx.conf  up_debug.sh
notes-server/certs/: 01.pem  cacert.pem  cakey.pem  index.txt  openssl-ca.cnf  openssl-server.cnf  servercert.csr  serverkey.pem
notes-server/soap-examples/: create.txt  delete.txt  get-all.txt  get-one.txt  update.txt
notes-server/src/: main.rs
notes-server/src/dto/: mod.rs
notes-server/src/handlers/grpc/: mod.rs
notes-server/src/handlers/rest/: mod.rs
notes-server/src/handlers/soap/: mod.rs
notes-server/src/repository/: mod.rs
notes-server/src/service/: mod.rs
proto/: notes.proto
side-car/: Cargo.toml  Dockerfile
side-car/src/: config.rs  handlers.rs  main.rs  proxy.rs
src/: main.rs
src/dto/: dto.rs  mod.rs
src/handlers/: mod.rs
src/handlers/rest/: mod.rs  rest.rs
src/handlers/soap/: mod.rs
src/migrations/: V1__init_notes_table.sql
src/models/: mod.rs
src/repository/: embedded.rs  mod.rs  repository.rs
src/repository/embedded/: mod.rs
src/service/: mod.rs  service.rs
