[package]
name = "notes-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-macros = "0.5.0"
chrono = "0.4.42"
refinery = {version = "0.9.0", features = ["tokio-postgres"]}
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"]}
tower-http = {version = "0.6.7", features  = ["trace"]}
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[dev-dependencies]
cargo-watch = "8.0.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
type_complexity = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
