[package]
name = "email-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-macros = "0.5.0"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
