[package]
name = "grpc-client"
version = "0.1.0"
edition = "2024"
description = "gRPC client for notes-server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/IoplachkinI/notes-server"
readme = "../README.md"
keywords = ["notes", "api", "rest", "grpc", "soap", "client"]
categories = ["web-programming", "api-bindings"]

[dependencies]
prost = "0.13.3"
tonic = "0.12.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"

[build-dependencies]
tonic-build = "0.12.2"

