[package]
name = "load-balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-macros = "0.5.0"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
humantime-serde = "1.1.1"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["http2"] }
rustls = "0.23.35"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net"] }
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
