[package]
name = "notes-server"
version = "0.1.0"
edition = "2024"
description = "Notes server supporting REST, gRPC, and SOAP protocols"
license = "MIT OR Apache-2.0"
repository = "https://github.com/IoplachkinI/notes-server"
readme = "../README.md"
keywords = ["notes", "api", "rest", "grpc", "soap", "server"]
categories = ["web-programming", "api-bindings"]

[dependencies]
axum = "0.8.7"
axum-macros = "0.5.0"
chrono = "0.4.42"
prost = "0.13.3"
refinery = {version = "0.9.0", features = ["tokio-postgres"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-xml-rs = "0.6.0"
quick-xml = { version = "0.36", features = ["serialize"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"]}
tonic = "0.12.2"
tower = "0.5.2"
tower-http = {version = "0.6.7", features  = ["trace"]}
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
utoipa = {version = "5.4.0", features = ["axum_extras", "chrono"]}
utoipa-swagger-ui = {version = "9.0.2", features = ["axum", "reqwest"]}
reqwest = { version = "0.12.26", features = ["json"] }

[build-dependencies]
tonic-build = "0.12.2"

[dev-dependencies]
cargo-watch = "8.0.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
type_complexity = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
