[package]
name = "side-car"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-macros = "0.5.0"
axum-server = { version = "0.8.0", features = ["rustls", "tls-rustls"] }
humantime-serde = "1.1.1"
reqwest = "0.12.26"
rustls = "0.23.35"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_yaml = "0.9.34"
envy = "0.4"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
